--- a/public/search/index.html
+++ b/public/search/index.html
@@ -138,18 +138,18 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://dhtzs.dev/" title="Home">
-                    <span>Home</span>
+                <a href="https://dhtzs.dev/" title="/home">
+                    <span>/home</span>
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/about-me/" title="About me">
-                    <span>About me</span>
+                <a href="https://dhtzs.dev/about-me/" title="/about-me">
+                    <span>/about-me</span>
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/write-ups/" title="Write-ups">
-                    <span>Write-ups</span>
+                <a href="https://dhtzs.dev/write-ups/" title="/write-ups">
+                    <span>/write-ups</span>
                 </a>
             </li>
         </ul>
