--- a/public/write-ups/index.html
+++ b/public/write-ups/index.html
@@ -136,18 +136,18 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://dhtzs.dev/" title="Home">
-                    <span>Home</span>
+                <a href="https://dhtzs.dev/" title="/home">
+                    <span>/home</span>
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/about-me/" title="About me">
-                    <span>About me</span>
+                <a href="https://dhtzs.dev/about-me/" title="/about-me">
+                    <span>/about-me</span>
                 </a>
             </li>
             <li>
-                <a href="https://dhtzs.dev/write-ups/" title="Write-ups">
-                    <span class="active">Write-ups</span>
+                <a href="https://dhtzs.dev/write-ups/" title="/write-ups">
+                    <span class="active">/write-ups</span>
                 </a>
             </li>
         </ul>
