--- a/public/write-ups/index.html
+++ b/public/write-ups/index.html
@@ -60,12 +60,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
 
+<meta property="og:url" content="https://dhtzs.dev/write-ups/">
+<meta property="og:site_name" content="dhtzs.dev">
 <meta property="og:title" content="Write-ups">
 <meta property="og:description" content="Read my write-ups — Discover in-depth analyses of cybersecurity challenges, sharing insights and solutions in the world of ethical hacking.">
+<meta property="og:locale" content="en">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://dhtzs.dev/write-ups/">
 <meta property="og:image" content="https://dhtzs.dev/images/logo.png">
-<meta property="og:site_name" content="Dimitris Chatzis">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="https://dhtzs.dev/images/logo.png">
 <meta name="twitter:title" content="Write-ups">
@@ -150,11 +151,16 @@
                     <span class="active">/write-ups</span>
                 </a>
             </li>
+            <li>
+                <a href="https://dhtzs.dev/contact-me/" title="/contact-me">
+                    <span>/contact-me</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
 <main class="main"> 
-<header class="page-header"><div class="breadcrumbs"><a href="https://dhtzs.dev/">Home</a></div>
+<header class="page-header">
   <h1>
     Write-ups
   </h1>
@@ -165,8 +171,8 @@
     </main>
     
 <footer class="footer">
-    <p>Copyright &copy; 2024 | All rights reserved</p>
-    <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg> with <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg> and <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"><path d="M18 8h1a4 4 0 0 1 0 8h-1"></path><path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path><line x1="6" y1="1" x2="6" y2="4"></line><line x1="10" y1="1" x2="10" y2="4"></line><line x1="14" y1="1" x2="14" y2="4"></line></svg> by Dimitris Chatzis</p>
+    <p>&copy; 2024 | CC BY-SA 4.0</p>
+    <a href="https://github.com/dhtzs/dhtzs.dev" target="_blank" rel="noopener noreferrer me" title="View source"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg> with <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg> and <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="none"><path d="M18 8h1a4 4 0 0 1 0 8h-1"></path><path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path><line x1="6" y1="1" x2="6" y2="4"></line><line x1="10" y1="1" x2="10" y2="4"></line><line x1="14" y1="1" x2="14" y2="4"></line></svg> by Dimitris Chatzis</a>
 </footer>
 <a href="#top" aria-label="go to top" id="top-link" class="top-link" title="Go to top (Alt + G)" accesskey="g">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentColor">
@@ -178,8 +184,8 @@
     if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("\/sw.min.js", {
             updateViaCache: "none"
-        }).catch(function(err) {
-            return console.error(err);
+        }).catch(function(e) {
+            return console.error(e.message);
         });
     }
 </script>
@@ -209,13 +215,13 @@
                 }
             }
         }
-        xhr.open("GET", window.location.href + "?v=" + Date.now(), true);
+        xhr.open("GET", window.location.href + "?t=" + Date.now(), true);
         xhr.send();
     }
 </script>
 
 <script>
-    var menu = document.getElementById("menu")
+    var menu = document.getElementById("menu");
     if (menu) {
         menu.scrollLeft = localStorage.getItem("menu-scroll-position");
         menu.addEventListener("scroll", function() {
@@ -263,8 +269,8 @@
             document.body.classList.add("dark");
             localStorage.setItem("pref-theme", "dark");
         }
-        if (activityChart !== undefined) {
-            activityChart.update();
+        if (window.interactionsChart !== undefined) {
+            window.interactionsChart.update();
         }
     });
 </script>
