--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="mask-icon" href="https://dhtzs.dev/favicons/favicon.svg" />
     <meta name="theme-color" content="#1D1E20" />
     <meta name="msapplication-TileColor" content="#1D1E20" />
-    <link rel="alternate" type="application/json" href="https://dhtzs.dev/index.json" />
+    <link rel="alternate" type="application/json" href="https://dhtzs.dev/index.json" title="json" />
     <link rel="alternate" hreflang="en" href="https://dhtzs.dev/" />
     <noscript>
       <style>
