--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" dir="auto">
+<html lang="en" dir="auto" data-theme="auto">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,6 +10,9 @@
     <meta name="description" content="Explore my persona — A full-stack developer and security researcher on a digital journey." />
     <meta name="author" content="Dimitris Chatzis" />
     <link rel="canonical" href="https://dhtzs.dev/" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" />
     <link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style" />
     <link rel="icon" href="https://dhtzs.dev/favicon.ico" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://dhtzs.dev/favicons/favicon-16x16.png" />
@@ -20,6 +23,8 @@
     <meta name="msapplication-TileColor" content="#1D1E20" />
     <link rel="alternate" type="application/json" href="https://dhtzs.dev/index.json" title="json" />
     <link rel="alternate" hreflang="en" href="https://dhtzs.dev/" />
+    <link rel="manifest" href="/manifest.json" />
+
     <noscript>
       <style>
         #theme-toggle,
@@ -39,28 +44,36 @@
             --code-block-bg: rgb(46, 46, 51);
             --code-bg: rgb(55, 56, 62);
             --border: rgb(51, 51, 51);
+            color-scheme: dark;
           }
 
           .list {
             background: var(--theme);
           }
 
-          .list:not(.dark)::-webkit-scrollbar-track {
-            background: 0 0;
+          .toc {
+            background: var(--entry);
           }
+        }
 
-          .list:not(.dark)::-webkit-scrollbar-thumb {
-            border-color: var(--theme);
+        @media (prefers-color-scheme: light) {
+          .list::-webkit-scrollbar-thumb {
+            border-color: var(--code-bg);
           }
         }
       </style>
     </noscript>
-
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" />
-
+    <script>
+      if (localStorage.getItem("pref-theme") === "dark") {
+        document.querySelector("html").dataset.theme = "dark";
+      } else if (localStorage.getItem("pref-theme") === "light") {
+        document.querySelector("html").dataset.theme = "light";
+      } else if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        document.querySelector("html").dataset.theme = "dark";
+      } else {
+        document.querySelector("html").dataset.theme = "light";
+      }
+    </script>
     <meta property="og:url" content="https://dhtzs.dev/" />
     <meta property="og:site_name" content="dhtzs.dev" />
     <meta property="og:title" content="dhtzs.dev" />
@@ -81,22 +94,11 @@
         "url": "https://dhtzs.dev/",
         "description": "Explore my persona — A full-stack developer and security researcher on a digital journey.",
         "logo": "https://dhtzs.dev/favicon.ico",
-        "sameAs": ["https://linkedin.com/in/dimitris-chatzis", "https://x.com/dhtzs", "https://github.com/dhtzs", "https://hackerone.com/dhtzs", "https://bugcrowd.com/dhtzs", "https://intigriti.com/profile/dhtzs"]
+        "sameAs": ["https://linkedin.com/in/dimitris-chatzis", "https://x.com/dhtzs", "https://github.com/dhtzs", "https://hackerone.com/dhtzs", "https://bugcrowd.com/h/dhtzs", "https://app.intigriti.com/profile/dhtzs"]
       }
     </script>
   </head>
-
   <body class="list" id="top">
-    <script>
-      if (localStorage.getItem("pref-theme") === "dark") {
-        document.body.classList.add("dark");
-      } else if (localStorage.getItem("pref-theme") === "light") {
-        document.body.classList.remove("dark");
-      } else if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-        document.body.classList.add("dark");
-      }
-    </script>
-
     <header class="header">
       <nav class="nav">
         <div class="logo">
@@ -159,7 +161,7 @@
             <img draggable="false" src="https://dhtzs.dev/images/profile.jpg" alt="Dimitris Chatzis" title="Dimitris Chatzis" height="150" width="150" />
           </picture>
           <h1>Dimitris Chatzis</h1>
-          <span>Full-stack developer and hacking enthusiast. Security researcher on HackerOne, Bugcrowd, and Intigriti.</span>
+          <span>Security researcher. Active on HackerOne, Bugcrowd, and Intigriti.</span>
           <div class="social-icons">
             <a href="https://linkedin.com/in/dimitris-chatzis" target="_blank" rel="noopener noreferrer me" title="LinkedIn">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
@@ -181,12 +183,12 @@
                 <path d="M7.207 0c-.4836 0-.8774.1018-1.1823.3002-.3044.2003-.4592.4627-.4592.7798v21.809c0 .2766.1581.5277.4752.7609.315.2335.7031.3501 1.1664.3501.4427 0 .8306-.1166 1.1678-.3501.3352-.231.5058-.4843.5058-.761V1.0815c0-.319-.1623-.5769-.4893-.7813C8.0644.1018 7.6702 0 7.207 0zm9.5234 8.662c-.4836 0-.8717.0981-1.1683.3007l-4.439 2.7822c-.1988.1861-.2841.4687-.2473.855.0342.3826.2108.747.5238 1.0907.3145.346.6662.5626 1.0684.6547.3963.0899.6973.041.8962-.143l1.7551-1.0951v9.7817c0 .2767.1522.5278.4607.761.3007.2335.6873.3501 1.1504.3501.463 0 .863-.1166 1.1983-.3501.3371-.2332.5058-.4843.5058-.761V9.7381c0-.3193-.165-.577-.4898-.7754-.3252-.2026-.7288-.3007-1.2143-.3007z" />
               </svg>
             </a>
-            <a href="https://bugcrowd.com/dhtzs" target="_blank" rel="noopener noreferrer me" title="Bugcrowd">
+            <a href="https://bugcrowd.com/h/dhtzs" target="_blank" rel="noopener noreferrer me" title="Bugcrowd">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M24 12L18 1.387H6L0 12l6 10.613h12zm-5.782 1.658c-.003.825-.122 1.569-.354 2.231a5.05 5.05 0 0 1-.99 1.708 4.316 4.316 0 0 1-1.503 1.093 4.69 4.69 0 0 1-1.896.385 4.158 4.158 0 0 1-1.145-.152 3.754 3.754 0 0 1-.868-.36 3.792 3.792 0 0 1-.601-.435 3.023 3.023 0 0 1-.466-.514h-.04l.02.193c.011.166.018.331.02.497v.528H7.961V7.062c0-.151-.04-.263-.114-.337-.077-.074-.19-.109-.33-.109h-.811V4.425h2.452c.473-.003.824.108 1.048.331.222.223.333.576.33 1.049v3.003c-.003.258-.01.467-.02.626l-.02.247h.04a2.898 2.898 0 0 1 .463-.507c.156-.143.354-.284.6-.426.245-.142.538-.261.876-.36.38-.1.77-.15 1.162-.148.702.003 1.334.135 1.894.395a4.118 4.118 0 0 1 1.446 1.11c.4.48.707 1.052.92 1.715.212.658.317 1.392.32 2.198m-2.803 1.406c.138-.399.206-.852.209-1.366-.003-.659-.112-1.231-.328-1.718-.216-.484-.517-.859-.902-1.125a2.347 2.347 0 0 0-1.344-.404 2.57 2.57 0 0 0-.969.186 2.372 2.372 0 0 0-.83.589 2.839 2.839 0 0 0-.579 1.015c-.141.413-.212.906-.216 1.477 0 .397.053.792.159 1.174.101.366.265.712.483 1.02.211.3.486.548.805.722.32.176.698.267 1.127.27.343.002.683-.07.997-.213a2.43 2.43 0 0 0 .824-.623c.24-.273.428-.607.564-1.004Z" />
               </svg>
             </a>
-            <a href="https://intigriti.com/profile/dhtzs" target="_blank" rel="noopener noreferrer me" title="Intigriti">
+            <a href="https://app.intigriti.com/profile/dhtzs" target="_blank" rel="noopener noreferrer me" title="Intigriti">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" stroke="none">
                 <path d="M19.9133 6.0364c-1.1056.574-3.7632 1.924-5.8999 3.0084-3.7738 1.9134-7.0267 3.593-7.1117 3.6674-.032.0213.0106.404.085.8611.574 3.4123 2.1473 6.4526 4.316 8.3555l.691.6165.6909-.5953c1.839-1.6158 3.3273-4.2202 4.0502-7.0585.1488-.5634.2764-1.3076.287-1.6477l.0213-.6166-2.9553-1.5308-.7335.372c-.3933.202-.7229.3934-.7229.4253 0 .0319.6698.3933 1.4883.7973l1.4882.7335-.0637.3827c-.3934 2.1686-1.6158 4.7517-2.9234 6.1868l-.606.6698-.4464-.4253c-.9248-.893-1.9347-2.615-2.5194-4.3053-.3295-.946-.7229-2.4343-.659-2.4875.0212-.0212 3.0402-1.5414 6.7077-3.391l6.6546-3.3699.2126.3508c.6697 1.0843.7229 2.5407.1382 3.7313-.6484 1.3181-1.754 1.9879-3.3698 2.0623l-.978.0425-.0638.3189c-.0319.1807-.0638.4784-.0638.6803 0 .319.032.3615.3827.4253.574.1063 1.7647-.032 2.4556-.287 1.6796-.6273 2.849-1.9135 3.3699-3.7313.4464-1.5627-.032-3.423-1.265-4.8475-.2127-.2445-.4465-.4464-.5103-.4464-.0744.0106-1.0312.4783-2.1473 1.0524zM1.3739 5.4836C.1833 6.8762-.2632 8.6196.1514 10.2354c.4677 1.8071 1.6583 3.136 3.3698 3.7737.691.2552 1.8816.3934 2.4556.287.4146-.085.4571-.202.319-1.031l-.0638-.3934-.978-.0425c-1.6265-.0744-2.7214-.7442-3.3805-2.0836-.574-1.148-.5315-2.5406.085-3.6143l.2658-.4571 3.8482 1.956 3.8588 1.956.7123-.3508c.3933-.202.7122-.404.7122-.4465 0-.0638-9.3441-4.805-9.4823-4.805-.0425 0-.2658.2233-.4996.4997zm6.3144-3.6144l-.2657.404.2338.0638c.691.1807 1.6903.9567 2.1048 1.637l.2127.3402-.5953.8824c-.5953.893-1.212 2.0304-1.212 2.2323 0 .0957.9568.6379 1.1375.6379.0426 0 .287-.404.5316-.8824.5315-1.0417.9567-1.6583 1.6583-2.4024l.4996-.5315.4465.4783c.7016.7548 1.2119 1.4883 1.6902 2.4237.2445.4678.4678.8824.489.9143.0638.0744 1.2013-.5422 1.2013-.6591 0-.1914-.6485-1.3713-1.2225-2.2111l-.5953-.8717.2232-.3508c.3295-.5316 1.2012-1.2757 1.754-1.499.2658-.1169.4784-.255.4784-.3082 0-.0638-.1063-.2445-.2445-.4146l-.2445-.2976-.5209.2445c-.3083.1488-.8717.5846-1.3394 1.0524l-.808.8079-.659-.606-.6485-.6165-.6484.6165-.6591.6166-.7548-.7654C9.3254 2.1882 8.2943 1.476 8.018 1.476c-.032 0-.1808.1807-.3296.3933z" />
               </svg>
@@ -243,7 +245,11 @@
     <script>
       var menu = document.getElementById("menu");
       if (menu) {
-        menu.scrollLeft = localStorage.getItem("menu-scroll-position");
+        var scrollPosition = localStorage.getItem("menu-scroll-position");
+        if (scrollPosition) {
+          menu.scrollLeft = parseInt(scrollPosition, 10);
+        }
+
         menu.addEventListener("scroll", function () {
           localStorage.setItem("menu-scroll-position", menu.scrollLeft);
         });
@@ -282,11 +288,12 @@
     </script>
     <script>
       document.getElementById("theme-toggle").addEventListener("click", function () {
-        if (document.body.className.includes("dark")) {
-          document.body.classList.remove("dark");
+        var html = document.querySelector("html");
+        if (html.dataset.theme === "dark") {
+          html.dataset.theme = "light";
           localStorage.setItem("pref-theme", "light");
         } else {
-          document.body.classList.add("dark");
+          html.dataset.theme = "dark";
           localStorage.setItem("pref-theme", "dark");
         }
         if (window.interactionsChart !== undefined) {
